objects/Address.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Sdo_Scom_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>